<resources>
    <string name="app_name">MyRobot</string>
    <string name="stringRobotin">Robotin Picture</string>
    <string name="stringRed">Red</string>
    <string name="stringGreen">Green</string>
    <string name="stringBlue">Blue</string>
    <string name="stringText">Lorem ipsum dolor sit amet consectetur adipiscing elit suspendisse diam, parturient felis dui fusce mollis pharetra laoreet odio, pellentesque inceptos hac bibendum sociis ultrices nisi in. Posuere elementum scelerisque maecenas sem etiam quam at netus ligula, donec facilisis congue sed euismod blandit vel semper justo, orci sociis dignissim potenti eget ad accumsan velit. Nascetur pharetra nostra non facilisis est imperdiet cubilia, fringilla a donec fusce habitant montes primis class, lacinia parturient id fermentum praesent tortor. Condimentum nostra integer non hendrerit sociosqu, primis euismod hac tortor ultricies, tristique dis molestie odio.  Litora magna dignissim eleifend aliquam ultrices donec placerat diam, sociosqu felis netus mattis mollis potenti tristique, sociis eros vivamus tempus ut suscipit ante. Magnis lectus potenti interdum ridiculus bibendum tortor, duis quam dictum odio. Mollis orci purus mi iaculis posuere mus class porta non tortor nam condimentum pharetra, at tellus velit dui nullam dictumst vivamus natoque interdum fames ac dictum. Sagittis magnis duis neque euismod fusce erat vivamus facilisis elementum taciti odio enim, convallis accumsan lacinia rhoncus metus ridiculus imperdiet ultrices sed in platea, molestie ornare conubia risus sem facilisi pharetra diam nunc habitasse posuere.  Proin ullamcorper cras posuere lobortis inceptos rutrum eros himenaeos erat, sed dis condimentum turpis libero feugiat facilisi pellentesque, nisl commodo class natoque justo laoreet aenean dictumst. Lacus vulputate vehicula cursus blandit nam nisl at, nec eleifend aenean phasellus vivamus nullam nunc dictumst, eu cum quisque varius eros hac. Posuere eros tempor sociis congue nunc porttitor odio, magnis neque euismod pulvinar morbi ridiculus massa vitae, dictum tristique duis scelerisque id semper.  Himenaeos in pretium dis nulla cubilia pellentesque nibh duis augue, habitasse condimentum montes diam per odio vestibulum. Fringilla habitasse curae netus diam ultrices suscipit egestas rutrum odio, ridiculus risus pellentesque felis mauris sem turpis varius sociis, condimentum convallis ante sodales ad eros curabitur nascetur. Penatibus nulla sollicitudin duis euismod justo praesent lacinia, quisque class malesuada turpis tincidunt pulvinar varius mollis, nibh mauris montes elementum est ultrices. Malesuada eleifend dictum suspendisse suscipit venenatis mi tempus est, primis turpis urna nibh dapibus tortor tincidunt habitant, a dictumst vehicula per commodo ac etiam.  Volutpat a purus est erat sociis iaculis eu nullam convallis, porttitor placerat vulputate cum libero facilisi justo natoque malesuada, curae vivamus duis odio suscipit ultricies consequat potenti. Sollicitudin nunc nibh per nisi taciti facilisis habitasse quam, eleifend eros mi a nullam at suscipit condimentum, urna imperdiet ultrices ultricies sociosqu velit proin. Condimentum montes vehicula penatibus dictum nisl nascetur mauris, magna inceptos dignissim taciti aliquet quis himenaeos, dis bibendum dictumst ante curabitur mi, risus integer torquent ad mattis turpis. Torquent sollicitudin faucibus velit euismod vel cras lobortis elementum, neque ultricies maecenas vehicula parturient habitant mollis a, class nascetur cum phasellus dapibus gravida platea.</string>
</resources>
